test workflows (#27)
* test workflows

* fix-workflow

* fix-workflow

* fix-workflow

* fix-workflow

* fix-workflow

* fix-workflow