@@ -133,15 +133,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
                 <configuration>
-                    <argLine>
-                        -javaagent:/home/cstefc/.m2/repository/org/mockito/mockito-core/5.14.0/mockito-core-5.14.0.jar
-                        --add-opens java.base/java.lang=ALL-UNNAMED
-                        --add-opens java.base/java.util=ALL-UNNAMED
-                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
-                    </argLine>
+                    <systemPropertyVariables>
+                        <spring.profiles.active>test</spring.profiles.active>
+                    </systemPropertyVariables>
                 </configuration>
+                <version>3.2.5</version>
             </plugin>
 
             <!-- Checkstyle -->
@@ -162,18 +159,6 @@
                 <version>3.22.0</version>
                 <configuration>
                     <failOnViolation>true</failOnViolation>
-                </configuration>
-            </plugin>
-
-            <!-- Spotless -->
-            <plugin>
-                <groupId>com.diffplug.spotless</groupId>
-                <artifactId>spotless-maven-plugin</artifactId>
-                <version>2.43.0</version>
-                <configuration>
-                    <java>
-                        <googleJavaFormat/>
-                    </java>
                 </configuration>
             </plugin>
 
